<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".ui.fragment.setting.SettingFragment">
    <!--Profile-->


    <LinearLayout
        android:id="@+id/ProfileLayout"
        android:layout_width="382dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginEnd="5dp"
        android:layout_marginBottom="10dp"
        android:gravity="bottom"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@+id/view"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/profile_username"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_margin="10dp"
            android:background="@drawable/ic_baseline_account_circle_24"
            app:civ_border_color="#FF000000"
            app:civ_border_width="2dp" />

        <TextView
            android:id="@+id/usernameID"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:fontFamily="@font/roboto"
            android:text="@string/prompt_username"
            android:textColor="#000000"
            android:textSize="20sp" />
    </LinearLayout>

    <!--    View-->


    <View
        android:id="@+id/view"
        android:layout_width="0dp"
        android:layout_height="2dp"
        android:background="#c0c0c0"
        app:layout_constraintBottom_toTopOf="@+id/SettingLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ProfileLayout" />

    <!--    Setting-->
    <LinearLayout
        android:id="@+id/SettingLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="5dp"
        android:gravity="bottom"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view">

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginVertical="10dp"
            android:src="@drawable/ic_baseline_settings_24"
            tools:layout_editor_absoluteX="26dp"
            tools:layout_editor_absoluteY="128dp" />

        <TextView
            android:id="@+id/settingText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginHorizontal="10dp"
            android:layout_weight="1"
            android:fontFamily="@font/roboto"
            android:text="@string/title_setting"
            android:textAllCaps="false"
            android:textColor="#000000"
            android:textSize="16sp"
            tools:layout_editor_absoluteX="95dp"
            tools:layout_editor_absoluteY="140dp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/SignOutLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="5dp"
        android:gravity="bottom"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/SettingLayout">

        <ImageView
            android:id="@+id/SignOutIcon"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginVertical="10dp"
            android:src="@drawable/ic_baseline_login_24"
            tools:layout_editor_absoluteX="26dp"
            tools:layout_editor_absoluteY="128dp" />

        <TextView
            android:id="@+id/SignOutText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginHorizontal="10dp"
            android:layout_weight="1"
            android:fontFamily="@font/roboto"
            android:text="@string/title_signout"
            android:textColor="#000000"
            android:textSize="16sp"
            tools:layout_editor_absoluteX="95dp"
            tools:layout_editor_absoluteY="140dp" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>